--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -310,6 +310,8 @@
   </div>
 
   <div id="toast" class="toast"></div>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 
   <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
