--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -306,6 +306,8 @@
       <div id="costResult" class="scrollable-table"></div>
     </section>
 
+    <canvas id="mealBazarChart" width="800" height="400"></canvas>
+
     <a id="logout" href="/logout" class="logout">Logout</a>
   </div>
 
